--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         SS
       </div>
 
-      <div class="name">Shatakshi Singh</div>
-      <div class="role">UI / UX Designer</div>
+      <div class="name">Dhayalan </div>
+      <div class="role">Java Developer</div>
 
       <div class="contact">
         <div style="margin-top:10px">📍 Kanchipuram, Tamil Nadu</div>
